Code formatting updated 2

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,6 @@ jobs:
           node-version: "16.x"
       - run: npm ci
       - run: npx prettier --check .
-      - run: npm test -- --coverage
+      - run: coverage index.html
         env:
           CI: true
